template health capacity

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,3 +27,5 @@ dcos_service_http_health_check:
     "ignoreHttp1xx": false
 dcos_service_use_default_http_health_check: "no"
 dcos_service_health_checks: "{% if dcos_service_use_default_http_health_check == 'yes' %}{{ dcos_service_http_health_check }}{% else %}{{ dcos_service_tcp_health_check }}{% endif %}"
+dcos_min_health_cap: 0
+dcos_max_over_cap: 0
