--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,3 +34,10 @@ dcos_service_health_checks: "{% if dcos_service_use_default_http_health_check ==
 dcos_min_health_cap: 0
 dcos_max_over_cap: 0
 dcos_service_grace_kill: 3 #marathon default, unit is seconds
+dcos_service_privileged: false
+dcos_service_force_pull: true
+dcos_service_unreachable_strat:
+  - "inactiveAfterSeconds": 300
+    "expungeAfterSeconds": 600
+dcos_service_kill_selection: "YOUNGEST_FIRST"
+dcos_service_params: {}
